Bug 1774072 - Flush folder cache at Account Manager shutdown. r=benc

Based on https://github.com/Betterbird/thunderbird-patches/blob/main/102/bugs/1774072-flush-folder-cache-at-shutdown.patch

Differential Revision: https://phabricator.services.mozilla.com/D149800

--HG--
extra : amend_source : 79855893bf8bef567d89803698ec4ab948334904